Sutter Health/src/objects/Correspondence_Letter__c.object
<CustomObject>
    <fields>
        <fullName>BrokerContact__c</fullName>
        <label>BrokerContact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_List__c</fullName>
        <label>Contact List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorrespondenceOnBase_URL__c</fullName>
        <formula>&apos;http://DCQWWEB061/BDITESTOnBaseWeb/docpop/docpop.aspx?clienttype=html&amp;docid=&apos;+SHP_OnBaseID__c</formula>
        <label>CorrespondenceOnBase  URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Content__c</fullName>
        <label>Letter Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Letterbody__c</fullName>
        <label>Letterbody</label>
        <length>131068</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_Base_URL__c</fullName>
        <formula>HYPERLINK(&quot;http://DCQWWEB061/BDITESTOnBaseWeb/docpop/docpop.aspx?clienttype=html&amp;docid=&quot; &amp;SHP_OnBaseID__c , &quot;Document&quot;)</formula>
        <label>On Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_CorrespondenceOnBase_ID__c</fullName>
        <label>CorrespondenceOnBase ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Correspondence_Definition__c</fullName>
        <label>Correspondence Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Correspondence_Display_Name__c</fullName>
        <label>Correspondence Display Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Correspondence_Entity_Recipient_HCC__c</fullName>
        <label>Correspondence Entity Recipient HCC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Correspondence_Entity_Recipient_Type__c</fullName>
        <label>Correspondence Entity Recipient Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Correspondence_Entity_Subject_HCC_ID__c</fullName>
        <label>Correspondence Entity Subject HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Correspondence_Entity_Subject_Type__c</fullName>
        <label>Correspondence Entity Subject Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Correspondence_External_id__c</fullName>
        <label>Correspondence External id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Correspondence_File_Name__c</fullName>
        <label>Correspondence File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Correspondence_ID__c</fullName>
        <label>Correspondence ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Custom_Message_Code__c</fullName>
        <label>Custom Message Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_DateTime_Generated__c</fullName>
        <label>DateTime Generated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SHP_DateTime_Resent__c</fullName>
        <label>DateTime Resent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SHP_DateTime_Triggered__c</fullName>
        <label>DateTime Triggered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SHP_Date_Printed__c</fullName>
        <label>Date Printed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHP_Date_Transferred_Print_Vendor__c</fullName>
        <label>Date Transferred Print Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHP_Date_Transferred_to_Post_Office__c</fullName>
        <label>Date Transferred to Post Office</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHP_Employer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SHP Employer Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Correspondence Letters</relationshipLabel>
        <relationshipName>Correspondence_Letters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SHP_Entity_ID__c</fullName>
        <label>Entity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Entity_Type__c</fullName>
        <label>Entity Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_IsReplacement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReplacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SHP_Is_Logical_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Logical Delete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SHP_Mailing_Address__c</fullName>
        <formula>SHP_Address_Line_1__c  + &apos; &apos; + SHP_Address_Line_2__c+ &apos; &apos; +
SHP_Address_Line_3__c + &apos; &apos; + SHP_City__c+ &apos; &apos; +
SHP_State__c+ &apos; &apos; +SHP_ZipCode__c</formula>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Member_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SHP Member Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Correspondence Letters</relationshipLabel>
        <relationshipName>Correspondence_Letters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SHP_OnBaseID__c</fullName>
        <externalId>true</externalId>
        <label>OnBaseID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SHP_Parent_Correspondence_ID_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Correspondence ID Lookup</label>
        <referenceTo>Correspondence_Letter__c</referenceTo>
        <relationshipLabel>Correspondence Letters</relationshipLabel>
        <relationshipName>Correspondence_Letters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SHP_Parent_Correspondence_ID__c</fullName>
        <label>Parent Correspondence ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Source__c</fullName>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_ZipCode__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Template_Name__c</fullName>
        <label>Selected Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Template__c</fullName>
        <label>Selected Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Req for Email template</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>VP Sales Review</fullName>
                </value>
                <value>
                    <fullName>VP Marketing Review</fullName>
                </value>
                <value>
                    <fullName>VP Sales Rejected</fullName>
                </value>
                <value>
                    <fullName>VP Marketing Rejected</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dependent_Correspondence</relationshipLabel>
        <relationshipName>Dependent_Correspondence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Contact_List__c</fullName>
        <description>Correspondence Broker template</description>
        <label>To Contact List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>queryForContact__c</fullName>
        <label>queryForContact</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Correspondence Letter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Selected_Template_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Correspondence_Letter</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Selected_Template_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Marketing</label>
        <queue>Marketing</queue>
        <sharedTo>
            <group>Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Correspondence</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Selected_Template_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Correspondence</label>
    </listViews>
    <listViews>
        <fullName>Sales_Marketing_Queue_Correspondence_Letter</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Selected_Template_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Sales &amp; Marketing Queue</label>
        <queue>Sales_Marketing_Queue</queue>
        <sharedTo>
            <group>Sales_Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VP_Marketing_Correspondence_Letter</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Selected_Template_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>VP Marketing</label>
        <queue>VP_Marketing</queue>
        <sharedTo>
            <group>VP_Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VP_Sales_Correspondence_Letter</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Selected_Template_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>VP Sales</label>
        <queue>VP_Sales</queue>
        <sharedTo>
            <group>VP_Sales</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Letter-{0000}</displayFormat>
        <label>Letter No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correspondence Letters</pluralLabel>
    <recordTypes>
        <fullName>Correspondence_Letter</fullName>
        <active>true</active>
        <label>Correspondence Letter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Correspondence_Letter_RO</fullName>
        <active>true</active>
        <label>Correspondence Letter RO</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Employer_Member</fullName>
        <active>true</active>
        <label>SHP Employer Member</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>